# simfil

./: .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clang-tidy  conanfile.py  conanfile.txt  deps.cmake  simfil-language.md  sonar-project.properties
.github/workflows/: clang-tidy.yml  cmake.yml  codeql-analysis.yml  codeql.yml  conan.yml  coverage.yml  package.yml
cmake/: Dependencies.cmake  column_type_validator.cmake  column_type_validator.py  deps.cmake
doc/: developer_guide.md
docs/: simfil-dev-guide.md  simfil-language.md
examples/: example.json
examples/minimal/: CMakeLists.txt  main.cpp
include/simfil/: base64.h  byte-array.h  diagnostics.h  environment.h  error.h  exception-handler.h  expression-visitor.h  expression.h  ext-geo.h  function.h  intrusive_ptr.h  model.h  object.h  operator.h  overlay.h  parser.h  result.h  segmented-vector.h  simfil.h  sourcelocation.h  token.h  transient.h  typed-meta-type.h  types.h  value.h
include/simfil/model/: arena.h  bitsery-traits.h  column.h  fields.h  fixed-arena.h  json.h  model.h  nodes.h  nodes.impl.h  point.h  schema.h  string-handle.h  string-pool.h  tiny-arena.h
playground/: CMakeLists.txt  index.html  playground.cpp  playground.h
repl/: CMakeLists.txt  repl.cpp
src/: completion.cpp  completion.h  diagnostics.cpp  environment.cpp  error.cpp  exception-handler.cpp  expected.h  expression-patterns.h  expression-visitor.cpp  expressions.cpp  expressions.h  ext-geo.cpp  function.cpp  levenshtein.h  model.cpp  overlay.cpp  parser.cpp  rewrite-rules.h  simfil.cpp  token.cpp  types.cpp  value.cpp
src/model/: fields.cpp  json.cpp  model.cpp  nodes.cpp  string-pool.cpp
test/: CMakeLists.txt  arena.cpp  common.cpp  common.hpp  completion.cpp  complex.cpp  diagnostics.cpp  error.cpp  ext-geo.cpp  fixe-arena.cpp  fixed-arena.cpp  intrusive_ptr.cpp  operator.cpp  performance.cpp  schema.cpp  simfil.cpp  tiny-arena.cpp  token.cpp  value.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tools/: column_type_validator.py
